--- a/style.css
+++ b/style.css
@@ -81,6 +81,20 @@
             padding: 15px 40px;
             box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
         }
+        
+        .btn:hover {
+            transform: scale(1.1);
+        }
+        
+        .link:hover {
+            text-decoration: underline;
+        }
+        
+        .btn:active,
+        .link:active,
+        .btn-link:active {
+            opacity: 0.7;
+        }
         /* header */
         
         .header {
