--- a/style.css
+++ b/style.css
@@ -551,6 +551,22 @@
             padding-bottom: 10px;
         }
         
+        @media screen and (max-width: 800px) {
+            .crumbs__items {
+                position: relative;
+            }
+            .crumbs__items::before {
+                content: "";
+                position: absolute;
+                top: 11px;
+                left: 8px;
+                width: 20px;
+                height: 16px;
+                background-image: url(img/arrow-before.png);
+                background-repeat: no-repeat;
+            }
+        }
+        
         .crumbs__items-item {
             font-size: 10px;
             line-height: 15px;
@@ -564,6 +580,26 @@
         
         .crumbs__items-item-link-nounderline {
             text-decoration: none;
+        }
+        
+        @media screen and (max-width: 800px) {
+            .crumbs__items-item-link-nounderline {
+                display: none;
+            }
+        }
+        
+        .crumbs__mobile-items-item-link {
+            display: none;
+        }
+        
+        @media screen and (max-width: 800px) {
+            .crumbs__mobile-items-item-link {
+                display: block;
+                font-family: 'HelveticaNeueCyr-Roman', sans-serif;
+                font-size: 12px;
+                text-decoration: none;
+                color: #000000;
+            }
         }
         /* about */
         
