--- a/style.css
+++ b/style.css
@@ -336,6 +336,7 @@
     @media screen and (max-width: 800px) {
         .main {
             background-image: none;
+            padding-bottom: 0;
         }
     }
     
@@ -796,7 +797,7 @@
     @media screen and (max-width: 800px) {
         .price {
             background-image: none;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             margin-top: 30px;
             margin-bottom: 30px;
@@ -1087,16 +1088,41 @@
             font-size: 18px;
         }
     }
-    /* scroll */
+    /* slider-mobile */
     
-    .scroll {
-        overflow-x: scroll;
-        overflow-y: hidden;
-        white-space: nowrap;
+    .slider-mobile {
+        display: none;
     }
     
-    .scroll-card {
-        display: inline-block;
+    @media screen and (max-width: 800px) {
+        .slider-mobile {
+            display: block;
+            padding-bottom: 22px;
+            margin-left: 10px;
+        }
+        .slider-mobile__scroll {
+            overflow-x: scroll;
+            overflow-y: hidden;
+            white-space: nowrap;
+            text-align: center;
+        }
+        .slider-mobile__scroll-card {
+            display: inline-block;
+            border: 1px solid #838383;
+            width: 140px;
+            height: 150px;
+            text-align: center;
+            margin-right: 10px;
+        }
+        .slider-mobile__scroll-card-caption {
+            margin: 0;
+            font-family: 'HelveticaNeueCyr-Medium', sans-serif;
+            font-size: 12px;
+        }
+        .slider-mobile__scroll-link {
+            color: #000000;
+            text-decoration: none;
+        }
     }
     /* footer */
     
